[gd_scene load_steps=3 format=3 uid="uid://da6p15tjho586"]

[ext_resource type="Script" uid="uid://4rwohero6woh" path="res://scripts/player/Dialog/DialogBox.gd" id="1_xrudr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrudr"]
bg_color = Color(0.0010510484, 0.00084523164, 0.0006157204, 0.6627451)

[node name="DialogBox" type="CanvasLayer"]
process_mode = 2
layer = 10
visible = false
script = ExtResource("1_xrudr")

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -146.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xrudr")

[node name="ContinuePrompt" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.6872149, 0.68721503, 0.6872149, 1)
theme_override_font_sizes/font_size = 11
text = "press ,,Space\" to continue..."

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_top = 6.0
offset_right = 1148.0
offset_bottom = 144.0

[node name="Avatar" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PlaceHodler"

[node name="TextLabel" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 80)
layout_mode = 2
size_flags_vertical = 4
text = "PlaceHolder
"
fit_content = true
